fix: scrollbar and too long project labels

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,5 @@
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
-
-body::-webkit-scrollbar {
-  display: none;
+  overflow-x: hidden;
 }
